@@ -3,6 +3,7 @@ package com.nhl.link.rest;
 import java.io.IOException;
 
 import com.fasterxml.jackson.core.JsonGenerator;
+import com.nhl.link.rest.encoder.EncoderVisitor;
 
 /**
  * Encapsulates how certain data is extracted and encoded from entity objects.
@@ -17,4 +18,12 @@ public interface EntityProperty {
 	 * output.
 	 */
 	void encode(Object root, String propertyName, JsonGenerator out) throws IOException;
+
+	/**
+	 * A graph traversal method that recursively visits all graph nodes that
+	 * will be encoded with this encoder.
+	 * 
+	 * @since 2.0
+	 */
+	int visit(Object object, String propertyName, EncoderVisitor visitor);
 }
