@@ -1,0 +1,9 @@
+package com.nhl.link.rest.encoder;
+
+/**
+ * @since 2.0
+ */
+public interface EncoderVisitor {
+
+	int visit(Object object);
+}
