@@ -3,6 +3,7 @@ Release 2.0
 #167 Move to Java 8
 #173 Centralized ExecutorService
 #175 Removing API deprecated prior to 2.0
+#178 Encoder "visitor" API
 
 Release 1.24
 
